--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
+    "@mui/styles": "^6.0.2",
+    "@react-three/drei": "^9.111.1",
+    "@react-three/fiber": "^8.17.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.57.0",
     "phaser": "^3.80.1",
     "react": "^18.3.1",
+    "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "save-dev": "^0.0.1-security",
+    "three": "^0.167.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
