--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "^5.6.0",
     "resolve-url-loader": "^5.0.0",
     "style-loader": "^4.0.0",
